--- a/01-前端开发基础/案例练习/03_王者荣耀/index.html
+++ b/01-前端开发基础/案例练习/03_王者荣耀/index.html
@@ -138,9 +138,57 @@
           <h3 class="notice">
             <a href="#">蒙犽源·梦皮肤海报投票活动开启公告 蒙犽源·梦皮肤海报投票活动开启公告</a>
           </h3>
-          <div class="content">
-            新闻内容
-          </div>
+          <ul class="content">
+            <li class="item">
+              <a href="#">
+                <span class="news-type">热门</span>
+                <span class="desc">最新BUG修复进展【老亚瑟的答疑时间】最新BUG修复进展【老亚瑟的答疑时间】</span>
+              </a>
+              <span class="date">04/19</span>
+            </li>
+            <li class="item">
+              <a href="#">
+                <span class="news-type">热门</span>
+                <span class="desc">最新BUG修复进展【老亚瑟的答疑时间】</span>
+              </a>
+              <span class="date">04/19</span>
+            </li>
+            <li class="item">
+              <a href="#">
+                <span class="news-type">热门</span>
+                <span class="desc">最新BUG修复进展【老亚瑟的答疑时间】</span>
+              </a>
+              <span class="date">04/19</span>
+            </li>
+            <li class="item">
+              <a href="#">
+                <span class="news-type">热门</span>
+                <span class="desc">最新BUG修复进展【老亚瑟的答疑时间】</span>
+              </a>
+              <span class="date">04/19</span>
+            </li>
+            <li class="item">
+              <a href="#">
+                <span class="news-type">热门</span>
+                <span class="desc">最新BUG修复进展【老亚瑟的答疑时间】</span>
+              </a>
+              <span class="date">04/19</span>
+            </li>
+            <li class="item">
+              <a href="#">
+                <span class="news-type">热门</span>
+                <span class="desc">最新BUG修复进展【老亚瑟的答疑时间】</span>
+              </a>
+              <span class="date">04/19</span>
+            </li>
+            <li class="item">
+              <a href="#">
+                <span class="news-type">热门</span>
+                <span class="desc">最新BUG修复进展【老亚瑟的答疑时间】</span>
+              </a>
+              <span class="date">04/19</span>
+            </li>
+          </ul>
         </div>
         <div class="other">
           <a class="download_btn" href="#">下载游戏</a>
