--- a/01-前端开发基础/案例练习/03_王者荣耀/index.html
+++ b/01-前端开发基础/案例练习/03_王者荣耀/index.html
@@ -197,6 +197,33 @@
         </div>
       </div>
     </div>
+    <!-- 快速入口 -->
+    <div class="quick-entry">
+      <div class="container">
+        <ul class="quick-entry-list">
+          <li class="item">
+            <a href="#">
+              <img alt="" src="./assets/quick-entry1.png">
+            </a>
+          </li>
+          <li class="item">
+            <a href="#">
+              <img alt="" src="./assets/quick-entry2.png">
+            </a>
+          </li>
+          <li class="item">
+            <a href="#">
+              <img alt="" src="./assets/quick-entry3.png">
+            </a>
+          </li>
+          <li class="item">
+            <a href="#">
+              <img alt="" src="./assets/quick-entry4.png">
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
 
   </div>
 </body>
