--- a/01-前端开发基础/07-额外知识/04_表格元素.html
+++ b/01-前端开发基础/07-额外知识/04_表格元素.html
@@ -11,17 +11,56 @@
       border-collapse: collapse;
     }
 
+    table tr th, td {
+      text-align: center;
+      padding: 8px 16px;
+      border: 1px solid #000;
+    }
   </style>
 </head>
 <body>
   <table>
     <tr>
-      <th>1</th>
-      <th>2</th>
+      <th>排名</th>
+      <th>股票名称</th>
+      <th>股票代码</th>
+      <th>股票价格</th>
+      <th>股票涨跌</th>
     </tr>
     <tr>
-      <td></td>
-      <td></td>
+      <td>1</td>
+      <td>宏华数科</td>
+      <td>688789</td>
+      <td>100.25</td>
+      <td>13.49%</td>
+    </tr>
+    <tr>
+      <td>2</td>
+      <td>金盘科技</td>
+      <td>688676</td>
+      <td>33.67</td>
+      <td>11.16%</td>
+    </tr>
+    <tr>
+      <td>3</td>
+      <td>禾迈股份</td>
+      <td>688032</td>
+      <td>394.00</td>
+      <td>10.94%</td>
+    </tr>
+    <tr>
+      <td>4</td>
+      <td>圣龙股份</td>
+      <td>603178</td>
+      <td>13.555</td>
+      <td>9.98%</td>
+    </tr>
+    <tr>
+      <td>5</td>
+      <td>金晶科技</td>
+      <td>600586</td>
+      <td>8.49</td>
+      <td>9.97%</td>
     </tr>
   </table>
 </body>
