--- a/02-JavaScript/01-JavaScript基础/03_华为商城/index.html
+++ b/02-JavaScript/01-JavaScript基础/03_华为商城/index.html
@@ -1,106 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta content="IE=edge" http-equiv="X-UA-Compatible">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Document</title>
-  <link rel="stylesheet" href="./css/reset.css">
-  <link rel="stylesheet" href="./css/common.css">
-  <link rel="stylesheet" href="./css/banner.css">
-  <link rel="stylesheet" href="./css/product.css">
+  <link href="./css/reset.css" rel="stylesheet">
+  <link href="./css/common.css" rel="stylesheet">
+  <link href="./css/index.css" rel="stylesheet">
 </head>
-
 <body>
-  <!-- 轮播图 -->
-  <div class="banner">
-    <ul class="banner-list">
-    </ul>
-    <ul class="indicator">
-    </ul>
-  </div>
 
-  <!-- 内容 -->
-  <div class="wrapper">
+  <!-- 商品 -->
+  <div class="product wrapper">
+    <!-- 面包屑 -->
     <div class="crumbs">
-      <a class="item" href="#">首页</a>
-      <span class="split">&gt;</span>
-      <a class="item" href="#">笔记本</a>
+      <span class="item">首页</span>
+      <span>&gt;</span>
+      <span class="item">笔记本</span>
     </div>
-
-    <div class="menu">
-      <div class="category list">
-        <div class="item">分类：</div>
-        <div class="item">
-          <span>笔记本</span>
-        </div>
-        <div class="item">
-          <span>台式机</span>
-        </div>
-        <div class="item">
-          <span>智慧屏</span>
-        </div>
-      </div>
-      <div class="discount list">
-        <div class="item">服务优惠：</div>
-        <div class="item">
-          <span>仅看有货</span>
-        </div>
-        <div class="item">
-          <span>分期免息</span>
-        </div>
-        <div class="item">
-          <span>优惠商品</span>
-        </div>
-      </div>
-      <div class="sort list">
-        <div class="item">排序：</div>
-        <div class="item active" data-key="default">
-          <span>综合</span>
-        </div>
-        <div class="item" data-key="new">
-          <span>最新</span>
-        </div>
-        <div class="item" data-key="rateCount">
-          <span>评论数</span>
-        </div>
-        <div class="item" data-key="price">
-          <span>价格</span>
-        </div>
-      </div>
+    <!-- 过滤条件 -->
+    <div class="filter-condition">
+      <!-- 分类 -->
+      <ul class="row category">
+        <li class="item">分类：</li>
+        <li class="item">笔记本</li>
+        <li class="item">台式机</li>
+        <li class="item">智慧屏</li>
+      </ul>
+      <!-- 服务优惠 -->
+      <ul class="row discount">
+        <li class="item">服务优惠：</li>
+        <li class="item">仅看有货</li>
+        <li class="item">分期免息</li>
+        <li class="item">优惠商品</li>
+      </ul>
+      <!-- 排序 -->
+      <ul class="row sort">
+        <li class="item">排序：</li>
+        <li class="item">综合</li>
+        <li class="item">最新</li>
+        <li class="item">评论数</li>
+        <li class="item">价格</li>
+      </ul>
     </div>
-
-    <ul class="product">
-      <!-- <li class="item">
-        <a href="#">
-          <img class="album" src="./img/product_01.webp" alt="">
-          <div class="title">HUAWEI MateBook E 12.6英寸</div>
-          <div class="discount">
-            预订立省300元|12期免息
-          </div>
-          <div class="price">¥6499</div>
-          <div class="welfare">
-            <span class="tip">分期免息</span>
-            <span class="tip">赠送积分</span>
-          </div>
-          <div class="comment">
-            <span class="count">
-              6029人评价
-            </span>
-            <span class="rate">
-              97% 好评
-            </span> 
-          </div>
-        </a>
-      </li> -->
-    </ul>
   </div>
-  <script src="./data/banner.js"></script>
-  <script src="./data/data.js"></script>
-  <script src="./js/banner.js"></script>
-  <script src="./js/product.js"></script>
 
 </body>
-
 </html>
