--- a/02-JavaScript/01-JavaScript基础/03_华为商城/index.html
+++ b/02-JavaScript/01-JavaScript基础/03_华为商城/index.html
@@ -31,14 +31,14 @@
       <!-- 服务优惠 -->
       <ul class="row discount">
         <li class="item">服务优惠：</li>
-        <li class="item">仅看有货</li>
+        <li class="item active">仅看有货</li>
         <li class="item">分期免息</li>
         <li class="item">优惠商品</li>
       </ul>
       <!-- 排序 -->
       <ul class="row sort">
         <li class="item">排序：</li>
-        <li class="item">综合</li>
+        <li class="item active">综合</li>
         <li class="item">最新</li>
         <li class="item">评论数</li>
         <li class="item">价格</li>
