--- a/02-JavaScript/01-JavaScript基础/03_华为商城/index.html
+++ b/02-JavaScript/01-JavaScript基础/03_华为商城/index.html
@@ -144,7 +144,7 @@
             <li class="tag">分期免息</li>
             <li class="tag">赠送积分</li>
           </ul>
-          <div class="appraise">
+          <div class="comment">
             <div class="count">
               <span class="num">3990</span>
               人评价
