--- a/02-JavaScript/01-JavaScript基础/03_华为商城/index.html
+++ b/02-JavaScript/01-JavaScript基础/03_华为商城/index.html
@@ -68,99 +68,76 @@
           </div>
         </a>
       </li>
-      <li class="item">
-        <a href="#">
-          <img alt="" class="album" src="./img/product_01.webp">
-          <div class="title">HUAWEI MateBook E 12.6英寸</div>
-          <div class="sub-title">预订立省300元|12期免息</div>
-          <div class="price">￥6499</div>
-          <ul class="tags">
-            <li class="tag">分期免息</li>
-            <li class="tag">赠送积分</li>
-          </ul>
-          <div class="comment">
-            <div class="count">
-              <span class="num">3990</span>
-              人评价
-            </div>
-            <div class="percent">
-              <span class="num">96%</span>
-              好评
-            </div>
-          </div>
-        </a>
-      </li>
-      <li class="item">
-        <a href="#">
-          <img alt="" class="album" src="./img/product_01.webp">
-          <div class="title">HUAWEI MateBook E 12.6英寸</div>
-          <div class="sub-title">预订立省300元|12期免息</div>
-          <div class="price">￥6499</div>
-          <ul class="tags">
-            <li class="tag">分期免息</li>
-            <li class="tag">赠送积分</li>
-          </ul>
-          <div class="comment">
-            <div class="count">
-              <span class="num">3990</span>
-              人评价
-            </div>
-            <div class="percent">
-              <span class="num">96%</span>
-              好评
-            </div>
-          </div>
-        </a>
-      </li>
-      <li class="item">
-        <a href="#">
-          <img alt="" class="album" src="./img/product_01.webp">
-          <div class="title">HUAWEI MateBook E 12.6英寸</div>
-          <div class="sub-title">预订立省300元|12期免息</div>
-          <div class="price">￥6499</div>
-          <ul class="tags">
-            <li class="tag">分期免息</li>
-            <li class="tag">赠送积分</li>
-          </ul>
-          <div class="comment">
-            <div class="count">
-              <span class="num">3990</span>
-              人评价
-            </div>
-            <div class="percent">
-              <span class="num">96%</span>
-              好评
-            </div>
-          </div>
-        </a>
-      </li>
-      <li class="item">
-        <a href="#">
-          <img alt="" class="album" src="./img/product_01.webp">
-          <div class="title">HUAWEI MateBook E 12.6英寸</div>
-          <div class="sub-title">预订立省300元|12期免息</div>
-          <div class="price">￥6499</div>
-          <ul class="tags">
-            <li class="tag">分期免息</li>
-            <li class="tag">赠送积分</li>
-          </ul>
-          <div class="comment">
-            <div class="count">
-              <span class="num">3990</span>
-              人评价
-            </div>
-            <div class="percent">
-              <span class="num">96%</span>
-              好评
-            </div>
-          </div>
-        </a>
-      </li>
     </ul>
   </div>
 
+  <script src="./data/data.js"></script>
+
   <script>
-    
+    // ① 动态展示商品列表数据
+    let productEl = document.querySelector(".product-list")
+    for (let item of resultList) {
+      // 获取页面所需要的数据
+      const {shopH5Url, photoPath, briefName, promotionInfo, price, goodRate, promoLabels, rateCount} = item
+      // 创建 item 元素
+      let itemEl = document.createElement("li")
+      itemEl.classList.add("item")
+      // 创建 a 元素
+      let aEl = document.createElement("a")
+      aEl.href = shopH5Url
+      itemEl.append(aEl)
+      // 创建 img 元素
+      let imgEl = document.createElement("img");
+      imgEl.classList.add("album")
+      imgEl.src = "./img/product_01.webp"
+      aEl.append(imgEl)
+      // 创建 div.title元素
+      let titleEl = document.createElement("div")
+      titleEl.classList.add("title")
+      titleEl.textContent = briefName
+      aEl.append(titleEl)
+      // 创建 div.sub-title 元素
+      let subTitleEl = document.createElement("div")
+      subTitleEl.classList.add("sub-title")
+      subTitleEl.textContent = promotionInfo
+      aEl.append(subTitleEl)
+      // 创建 div.price 元素
+      let priceEl = document.createElement("div")
+      priceEl.classList.add("price")
+      priceEl.textContent = `￥${price}`
+      aEl.append(priceEl)
+      // 创建 ul.tags 元素
+      let tagsEl = document.createElement("ul")
+      tagsEl.classList.add("tags")
+      for (let promoLabel of promoLabels) {
+        let tagEl = document.createElement("li")
+        tagEl.classList.add("tag")
+        tagEl.textContent = promoLabel
+        tagsEl.append(tagEl)
+      }
+      aEl.append(tagsEl)
+      // 创建 div.comment 元素
+      let commentEl = document.createElement('div')
+      commentEl.classList.add("comment")
+      let countEL = document.createElement("div")
+      countEL.classList.add("count")
+      let countNumEL = document.createElement("span")
+      countNumEL.classList.add("num")
+      countNumEL.textContent = `${rateCount}人评价`
+      countEL.append(countNumEL)
+      commentEl.append(countEL)
+      let percentEL = document.createElement("div")
+      percentEL.classList.add("percent")
+      let percentNumEL = document.createElement("span")
+      percentNumEL.classList.add("num")
+      percentNumEL.textContent = `${goodRate}%好评`
+      percentEL.append(percentNumEL)
+      commentEl.append(percentEL)
+      aEl.append(commentEl)
+      // 将 item 添加到页面上
+      productEl.append(itemEl)
+
+    }
   </script>
 </body>
 </html>
