--- a/02-JavaScript/01-JavaScript基础/03_华为商城/index.html
+++ b/02-JavaScript/01-JavaScript基础/03_华为商城/index.html
@@ -46,28 +46,28 @@
     </div>
     <!-- 商品列表 -->
     <ul class="product-list">
-      <li class="item">
-        <a href="#">
-          <img alt="" class="album" src="./img/product_01.webp">
-          <div class="title">HUAWEI MateBook E 12.6英寸</div>
-          <div class="sub-title">预订立省300元|12期免息</div>
-          <div class="price">￥6499</div>
-          <ul class="tags">
-            <li class="tag">分期免息</li>
-            <li class="tag">赠送积分</li>
-          </ul>
-          <div class="comment">
-            <div class="count">
-              <span class="num">3990</span>
-              人评价
-            </div>
-            <div class="percent">
-              <span class="num">96%</span>
-              好评
-            </div>
-          </div>
-        </a>
-      </li>
+      <!--       <li class="item"> -->
+      <!--         <a href="#"> -->
+      <!--           <img alt="" class="album" src="./img/product_01.webp"> -->
+      <!--           <div class="title">HUAWEI MateBook E 12.6英寸</div> -->
+      <!--           <div class="sub-title">预订立省300元|12期免息</div> -->
+      <!--           <div class="price">￥6499</div> -->
+      <!--           <ul class="tags"> -->
+      <!--             <li class="tag">分期免息</li> -->
+      <!--             <li class="tag">赠送积分</li> -->
+      <!--           </ul> -->
+      <!--           <div class="comment"> -->
+      <!--             <div class="count"> -->
+      <!--               <span class="num">3990</span> -->
+      <!--               人评价 -->
+      <!--             </div> -->
+      <!--             <div class="percent"> -->
+      <!--               <span class="num">96%</span> -->
+      <!--               好评 -->
+      <!--             </div> -->
+      <!--           </div> -->
+      <!--         </a> -->
+      <!--       </li> -->
     </ul>
   </div>
 
