--- a/02-JavaScript/01-JavaScript基础/03_华为商城/index.html
+++ b/02-JavaScript/01-JavaScript基础/03_华为商城/index.html
@@ -11,6 +11,46 @@
 </head>
 <body>
 
+  <!-- 轮播图 -->
+  <div class="banner">
+    <ul class="banner-img-list">
+      <li class="item">
+        <img alt="" src="./img/banner1.png">
+      </li>
+      <li class="item">
+        <img alt="" src="./img/banner2.png">
+      </li>
+      <li class="item">
+        <img alt="" src="./img/banner3.png">
+      </li>
+      <li class="item">
+        <img alt="" src="./img/banner4.png">
+      </li>
+      <li class="item">
+        <img alt="" src="./img/banner5.png">
+      </li>
+      <li class="item">
+        <img alt="" src="./img/banner6.png">
+      </li>
+      <li class="item">
+        <img alt="" src="./img/banner7.png">
+      </li>
+    </ul>
+    <div class="banner-control">
+      <button>上一个</button>
+      <button>下一个</button>
+    </div>
+    <ul class="banner-dotted">
+      <li class="item"></li>
+      <li class="item"></li>
+      <li class="item"></li>
+      <li class="item"></li>
+      <li class="item"></li>
+      <li class="item"></li>
+      <li class="item"></li>
+    </ul>
+  </div>
+
   <!-- 商品 -->
   <div class="product wrapper">
     <!-- 面包屑 -->
@@ -73,7 +113,7 @@
 
   <script src="./data/data.js"></script>
   <script src="./js/product.js"></script>
-  
+
 
 </body>
 </html>
