--- a/02-JavaScript/01-JavaScript基础/03_华为商城/index.html
+++ b/02-JavaScript/01-JavaScript基础/03_华为商城/index.html
@@ -14,7 +14,7 @@
   <!-- 轮播图 -->
   <div class="banner">
     <ul class="banner-img-list">
-      <li class="item">
+      <li class="item active">
         <img alt="" src="./img/banner1.png">
       </li>
       <li class="item">
