: 前端开发基础

--- a/01-前端开发基础/12-Grid布局/01_初识Grid布局.html
+++ b/01-前端开发基础/12-Grid布局/01_初识Grid布局.html
@@ -23,8 +23,8 @@
     }
 
     .box div {
-      width: 100px;
-      height: 100px;
+      /*width: 100px;*/
+      /*height: 100px;*/
       background-color: blueviolet;
       background-clip: content-box;
       border: 1px solid blueviolet;
@@ -42,7 +42,6 @@
     <div>6</div>
     <div>7</div>
     <div>8</div>
-    <div>9</div>
   </article>
 </body>
 </html>
