--- a/02-JavaScript/01-JavaScript基础/01-JavaScript基本语法/04_noscript元素.html
+++ b/02-JavaScript/01-JavaScript基础/01-JavaScript基本语法/04_noscript元素.html
@@ -7,14 +7,12 @@
   <title>Title</title>
 </head>
 <body>
+  <noscript>
+    <p>您的浏览器不支持或者关闭运行 JavaScript ，请更换浏览器~</p>
+  </noscript>
+
   <script>
-    let num1 = Number(prompt("请输入第一个数字："))
-    let num2 = Number(prompt("请输入第二个数字："))
-    if (num1 > num2) {
-      console.log(num1 + ">" + num2)
-    } else {
-      console.log(num1 + "<" + num2)
-    }
+    console.log()
   </script>
 </body>
 </html>
