--- a/02-JavaScript/01-JavaScript基础/01-JavaScript基本语法/11_语句_条件语句.html
+++ b/02-JavaScript/01-JavaScript基础/01-JavaScript基本语法/11_语句_条件语句.html
@@ -8,8 +8,12 @@
 </head>
 <body>
   <script>
-    let age = 25;
-    let isAdult = (age >= 18) ? "成年人" : "未成年人"; // 表达式 (age >= 18) 计算得到布尔值 true ，根据条件返回不同的值
+    let x = 10;
+    if (x > 0) {
+      console.log("x是正数");
+    } else {
+      console.log("x是非正数");
+    }
   </script>
 </body>
 </html>
