--- a/02-JavaScript/01-JavaScript基础/01-JavaScript基本语法/15_注释.html
+++ b/02-JavaScript/01-JavaScript基础/01-JavaScript基本语法/15_注释.html
@@ -8,8 +8,11 @@
 </head>
 <body>
   <script>
-    let age = 25;
-    let isAdult = (age >= 18) ? "成年人" : "未成年人"; // 表达式 (age >= 18) 计算得到布尔值 true ，根据条件返回不同的值
+    /*
+    * 定义一个人的详细信息
+    */
+    let name = "许大仙"
+    let age = 18
   </script>
 </body>
 </html>
