--- a/02-JavaScript/01-JavaScript基础/01-JavaScript基本语法/16_注释.html
+++ b/02-JavaScript/01-JavaScript基础/01-JavaScript基本语法/16_注释.html
@@ -8,8 +8,16 @@
 </head>
 <body>
   <script>
-    let age = 25;
-    let isAdult = (age >= 18) ? "成年人" : "未成年人"; // 表达式 (age >= 18) 计算得到布尔值 true ，根据条件返回不同的值
+    /** 求和
+     * @param {number} a 数值类型的变量
+     * @param {number} b 数值类型的变量
+     */
+    function add(a, b) {
+      return a + b;
+    }
+
+    var result = add(1, 2);
+    console.log(result)
   </script>
 </body>
 </html>
