--- a/02-JavaScript/01-JavaScript基础/02-JavaScript中的变量/01_JavaScript中的变量.html
+++ b/02-JavaScript/01-JavaScript基础/02-JavaScript中的变量/01_JavaScript中的变量.html
@@ -8,8 +8,10 @@
 </head>
 <body>
   <script>
-    let age = 25;
-    let isAdult = (age >= 18) ? "成年人" : "未成年人"; // 表达式 (age >= 18) 计算得到布尔值 true ，根据条件返回不同的值
+    var message = "Hello"
+    console.log("①", message);
+    message = "world"
+    console.log("②", message);
   </script>
 </body>
 </html>
