--- a/02-JavaScript/01-JavaScript基础/01-JavaScript基本语法/13_语句_函数定义语句.html
+++ b/02-JavaScript/01-JavaScript基础/01-JavaScript基本语法/13_语句_函数定义语句.html
@@ -8,8 +8,9 @@
 </head>
 <body>
   <script>
-    let age = 25;
-    let isAdult = (age >= 18) ? "成年人" : "未成年人"; // 表达式 (age >= 18) 计算得到布尔值 true ，根据条件返回不同的值
+    function greet(name) {
+      console.log("Hello, " + name + "!");
+    }
   </script>
 </body>
 </html>
