--- a/02-JavaScript/01-JavaScript基础/06_JavaScript中的函数/04_函数的参数使用.html
+++ b/02-JavaScript/01-JavaScript基础/06_JavaScript中的函数/04_函数的参数使用.html
@@ -8,7 +8,17 @@
 </head>
 <body>
   <script>
-    
+    /**
+     * @param {number} num1 形参，数值类型
+     * @param {number} num2 形参，数值类型
+     */
+    function add(num1, num2) {
+      return num1 + num2;
+    }
+
+    // 1 和 2 是实参
+    add(1, 2)
+
   </script>
 </body>
 </html>
