--- a/02-JavaScript/01-JavaScript基础/06_JavaScript中的函数/07_函数中调用函数.html
+++ b/02-JavaScript/01-JavaScript基础/06_JavaScript中的函数/07_函数中调用函数.html
@@ -13,7 +13,7 @@
 
     function foo() {
       // 终止条件（结束条件）
-      if (count++ == 2) {
+      if (count++ === 2) {
         return
       }
       console.log("foo 函数")
