--- a/02-JavaScript/01-JavaScript基础/06_JavaScript中的函数/18_立即执行函数的应用场景前.html
+++ b/02-JavaScript/01-JavaScript基础/06_JavaScript中的函数/18_立即执行函数的应用场景前.html
@@ -16,11 +16,9 @@
   <script>
     var btns = document.querySelectorAll('button');
     for (var i = 0; i < btns.length; i++) {
-      ;(function (m) {
-        btns[m].addEventListener('click', function () {
-          console.log(`第${m}个按钮被点击了`);
-        })
-      })(i)
+      btns[i].addEventListener('click', function () {
+        console.log(`第${i}个按钮被点击了`);
+      })
     }
   </script>
 </body>
