--- a/02-JavaScript/01-JavaScript基础/07_JavaScript面向对象/01_为什么需要对象.html
+++ b/02-JavaScript/01-JavaScript基础/07_JavaScript面向对象/01_为什么需要对象.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <script>
-    // 描述一个人
+    // 描述一个人，定义对象
     var person = {
       name: "许大仙", // 属性
       age: 18, // 属性
@@ -16,13 +16,23 @@
         console.log("正在吃饭^_^")
       }
     }
-    // 描述一辆车
+
+    // 使用（调用）对象中的属性和行为
+    console.log(person.name)
+    console.log(person.age)
+    person.eating()
+
+    // 描述一辆车，定义对象
     var car = {
       color: "红色", // 属性
       driver: function () { // 行为（方法）
         console.log("正在驾驶")
       }
     }
+
+    // 使用（调用）对象中的属性和行为
+    console.log(car.color)
+    car.driver()
   </script>
 </body>
 </html>
