--- a/02-JavaScript/01-JavaScript基础/07_JavaScript面向对象/02_对象的创建和使用.html
+++ b/02-JavaScript/01-JavaScript基础/07_JavaScript面向对象/02_对象的创建和使用.html
@@ -26,13 +26,13 @@
     person.address = "杭州"
     console.log(`name: ${person.name}`) // name: 许仙
     console.log(`age: ${person.age}`) // age: 20
-    console.log(`sex ${person.sex}`) // sex 男
+    console.log(`sex: ${person.sex}`) // sex: 男
     console.log(`address: ${person.address}`) // address: 杭州
     // 删除对象的属性
     delete person.address
     console.log(`name: ${person.name}`) // name: 许仙
     console.log(`age: ${person.age}`) // age: 20
-    console.log(`sex ${person.sex}`) // sex 男
+    console.log(`sex: ${person.sex}`) // sex: 男
     console.log(`address: ${person.address}`) // address: undefined
   </script>
 </body>
