--- a/02-JavaScript/01-JavaScript基础/07_JavaScript面向对象/06_JavaScript中的一些现象.html
+++ b/02-JavaScript/01-JavaScript基础/07_JavaScript面向对象/06_JavaScript中的一些现象.html
@@ -8,16 +8,19 @@
 </head>
 <body>
   <script>
+    // 现象一
     var num1 = 123
     var num2 = 123
 
     console.log(num1 === num2) // true
 
+    // 现象二
     var obj1 = {}
     var obj2 = {}
 
     console.log(obj1 === obj2) // false
 
+    // 现象三
     var info = {
       name: '张三',
       age: 18,
@@ -31,6 +34,16 @@
     friend.name = '王五'
 
     console.log(info.friend.name) // 王五
+
+    // 现象四
+    function foo(a) {
+      a = {
+        name: 'obj'
+      }
+    }
+
+    foo(info)
+    console.log(info.name) // 张三
   </script>
 </body>
 </html>
