--- a/02-JavaScript/01-JavaScript基础/07_JavaScript面向对象/09_JavaScript中的一些现象.html
+++ b/02-JavaScript/01-JavaScript基础/07_JavaScript面向对象/09_JavaScript中的一些现象.html
@@ -8,12 +8,24 @@
 </head>
 <body>
   <script>
-    // 现象一
-    var num1 = 123
-    var num2 = 123
+    // 现象四
+    function foo(a) {
+      a = {
+        name: 'obj'
+      }
+    }
 
-    console.log(num1 === num2) // true
+    var info = {
+      name: '张三',
+      age: 18,
+      friend: {
+        name: '李四',
+        age: 19
+      }
+    }
 
+    foo(info)
+    console.log(info.name) // 张三
   </script>
 </body>
 </html>
