--- a/02-JavaScript/01-JavaScript基础/07_JavaScript面向对象/10_JavaScript中的this.html
+++ b/02-JavaScript/01-JavaScript基础/07_JavaScript面向对象/10_JavaScript中的this.html
@@ -8,12 +8,11 @@
 </head>
 <body>
   <script>
-    // 现象一
-    var num1 = 123
-    var num2 = 123
+    function foo() {
+      console.log(this) // window
+    }
 
-    console.log(num1 === num2) // true
-
+    foo()
   </script>
 </body>
 </html>
