--- a/02-JavaScript/01-JavaScript基础/07_JavaScript面向对象/07_JavaScript中的一些现象.html
+++ b/02-JavaScript/01-JavaScript基础/07_JavaScript面向对象/07_JavaScript中的一些现象.html
@@ -8,12 +8,11 @@
 </head>
 <body>
   <script>
-    // 现象一
-    var num1 = 123
-    var num2 = 123
+    // 现象二
+    var obj1 = {}
+    var obj2 = {}
 
-    console.log(num1 === num2) // true
-
+    console.log(obj1 === obj2) // false
   </script>
 </body>
 </html>
