--- a/02-JavaScript/01-JavaScript基础/07_JavaScript面向对象/17_JavaScript创建一系列对象.html
+++ b/02-JavaScript/01-JavaScript基础/07_JavaScript面向对象/17_JavaScript创建一系列对象.html
@@ -10,6 +10,7 @@
   <script>
 
     /** 通过构造函数来创建对象
+     * 函数中的 this 一般指向某个对象，当我们通过 new 关键字调用之后，（JS 将帮助我们创建新的空对象，将属性和方法设置到新的对象上，然后返回该对象）。
      * @param {string} name 姓名
      * @param {number} age 年龄
      */
