--- a/02-JavaScript/01-JavaScript基础/07_JavaScript面向对象/24_函数也是对象.html
+++ b/02-JavaScript/01-JavaScript基础/07_JavaScript面向对象/24_函数也是对象.html
@@ -26,7 +26,9 @@
     console.log(Student.country)
     Student.study()
 
+    // 实例化对象
     var stu = new Student("许大仙", 18)
+    // 对象调用属性和方法
     console.log(stu.name)
     console.log(stu.age)
     stu.eating()
